--- a/css/sketch-pad.css
+++ b/css/sketch-pad.css
@@ -1,4 +1,14 @@
 
+h1{
+  margin: auto;
+  width: 500px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 60px;
+}
+
 #pad{
   width: 500px; height: 500px;
   border: 2px solid black;
